force-app/main/default/objects/FSM_SendDCFUpdates__e/FSM_SendDCFUpdates__e.object-meta.xml
<CustomObject>
    <description>Data Capture Form Platform Event to send DCF to 3rd party system, User Story SFI-35</description>
    <label>Send DCF Update</label>
    <pluralLabel>Send DCF Updates</pluralLabel>
</CustomObject>