force-app/main/default/objects/FSM_SendDCFUpdates__e/fields/FSM_DCFHeaderPayload__c.field-meta.xml
<CustomField>
    <fullName>FSM_DCFHeaderPayload__c</fullName>
    <description>SFI-547</description>
    <label>DCF Header Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>