force-app/main/default/objects/FSM_SendDCFUpdates__e/fields/FSM_DCFLineItemsPayload__c.field-meta.xml
<CustomField>
    <fullName>FSM_DCFLineItemsPayload__c</fullName>
    <description>SFI-35</description>
    <label>DCF Line Items Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>