force-app/main/default/objects/FSM_SendDCFUpdates__e/fields/FSM_DCFPayload1__c.field-meta.xml
<CustomField>
    <fullName>FSM_DCFPayload1__c</fullName>
    <description>SFI-35</description>
    <label>DCF Payload 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>