force-app/main/default/objects/FSM_SendDCFUpdates__e/fields/FSM_DCFPayload2__c.field-meta.xml
<CustomField>
    <fullName>FSM_DCFPayload2__c</fullName>
    <description>SFi-35</description>
    <label>DCF Payload 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>