force-app/main/default/objects/FSM_SendDCFUpdates__e/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <description>SFI-35</description>
    <label>Workorder SAP external Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>