force-app/main/default/objects/FSM_SendDCFUpdates__e/fields/FSM_FormName__c.field-meta.xml
<CustomField>
    <fullName>FSM_FormName__c</fullName>
    <description>SFI-35</description>
    <label>Form Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>